# BeastEngine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
apps/: CMakeLists.txt  sandbox.cpp
cmake/: functions.cmake
cmake/config/: config.cmake  config.cmake.dist
cmake/config/beastengine/: config.cmake.dist
cmake/config/lab/: config.cmake.dist
cmake/config/lab/integration/: config.cmake  config.cmake.dist
cmake/config/lab/unit/: config.cmake  config.cmake.dist
cmake/config/sandbox/: config.cmake.dist  sandbox_vars.txt
config/: config.json
include/BeastEngine/: Assertions.h  BeastEngine.h  EntryPoint.h  Logging.h  beastengine.h
include/BeastEngine/Core/: Application.h  Assertions.h  BeastEngine.h  DataStructures.h  Debugging.h  Helpers.h  Logging.h  PlatformSetup.h  Types.h  Versions.h
include/BeastEngine/Core/Events/: Events.h  KeyboardEvents.h  MouseEvents.h
include/BeastEngine/Core/Input/: InputCodes.h
include/BeastEngine/Core/Loggers/: Logger.h  LoggersFactories.h  LoggersFactory.h  LoggersTypes.h  StaticLogger.h
include/BeastEngine/Core/Windows/: AWindow.h  IWindow.h  IWindowFactory.h  WindowFactory.h
include/BeastEngine/Core/Windows/Windows/: WindowsWindow.h
include/BeastEngine/Definitions/: Helpers.h  Types.h  Versions.h.in
include/BeastEngine/Loggers/: LoggersFactory.h  LoggersTypes.h  StaticLogger.h
scripts/: run.py
scripts/src/: functions.py
scripts/src/beastengine/: beast_command_helper.py  beastengine.py
scripts/src/beastengine/commands/: build.py  class_command.py  classcommand.py  configure.py  init.py
scripts/src/beastengine/commands/class_commands/: class_add.py  class_command.py  class_files_helper.py  class_path_show.py  class_remove.py  target_cmake_vars_file_opener.py
scripts/src/beastengine/json/: json_manager.py
scripts/src/commandrunners/: cmake.py  command_runner.py  conan.py
scripts/src/commandrunners/cmake/: cmake.py  cmake_config_files_creator.py
scripts/src/config/: Config.py  ConfigManager.py  ConfigNames.py  config.json  config.py  config_manager.py  config_names.py  target_config_manager.py  temp.json
scripts/src/files/: file_opener.py
scripts/tests/commandrunners/: test_cmake.py  test_command_runner.py  test_conan.py
scripts/tests/commandrunners/cmake/: test_cmake.py  test_cmake_config_files_creator.py
scripts/tests/config/: test_config_manager.py
scripts/tests/files/file_opener/: test_file.py
scripts/tests/integration/beastengine/commands/class_commands/: test_class_file_helper_in.py
scripts/tests/json/: test_json_manager.py
scripts/tests/tests_utilities/: micro_mock.py
scripts/tests/unit/: test_functions.py
scripts/tests/unit/beastengine/commands/: test_build.py  test_configure.py  test_init.py
scripts/tests/unit/beastengine/commands/class_commands/: test_class_add.py  test_class_command.py  test_class_files_helper.py  test_class_remove.py  test_target_cmake_vars_file_opener.py
scripts/tests/unit/commandrunners/: test_command_runner.py  test_conan.py
scripts/tests/unit/commandrunners/cmake/: test_cmake.py  test_cmake_config_files_creator.py
scripts/tests/unit/config/: test_config_manager.py  test_config_names.py  test_target_config_manager.py
scripts/tests/unit/json_utils/: test_json_manager.py
src/: CMakeLists.txt  beastengine.cpp
src/BeastEngine/: beastengine.cpp
src/BeastEngine/Core/: Application.cpp  BeastEngine.cpp
src/BeastEngine/Core/Loggers/: Logger.cpp  LoggersFactories.cpp  LoggersFactory.cpp
src/BeastEngine/Core/Windows/: WindowFactory.cpp
src/BeastEngine/Core/Windows/Windows/: WindowsWindow.cpp
src/BeastEngine/Loggers/: LoggersFactory.cpp
tests/: CMakeLists.txt  TestCase.h  lab.cpp
tests/Functional/Core/Windows/Windows/: WindowsWindowTest.cpp  WindowsWindowTest.h
tests/Integration/: CMakeLists.txt
tests/Integration/Core/Loggers/: LoggersFactoryTest.cpp  LoggersFactoryTest.h
tests/Integration/Core/Windows/Windows/: WinTestSetup.h  WindowsKeyboardEventsTest.cpp  WindowsKeyboardEventsTest.h  WindowsMouseEventsTest.cpp  WindowsMouseEventsTest.h
tests/Loggers/: LoggersFactoryTest.cpp  LoggersFactoryTest.h
tests/Unit/: CMakeLists.txt
tests/Unit/Core/: BeastEngineTest.cpp  BeastEngineTest.h  DataStructuresTests.cpp  DataStructuresTests.h
tests/Unit/Core/Events/: KeyboardEventsTest.cpp  KeyboardEventsTest.h  MouseEventsTest.cpp  MouseEventsTest.h
tests/Unit/Core/Loggers/: LoggerTest.cpp  LoggerTest.h  LoggersFactoriesTests.cpp  LoggersFactoriesTests.h  LoggersFactoryTest.cpp  LoggersFactoryTest.h
