include("${PROJECT_CONFIG_PATH}/lab/integration/config.cmake")

add_executable(${BEAST_INTEGRATION_TESTS_TARGET_NAME} "${LAB_INTEGRATION_SRC_LIST}" "${LAB_INTEGRATION_HEADERS_LIST}")
target_include_directories(${BEAST_INTEGRATION_TESTS_TARGET_NAME} PRIVATE "${LAB_INTEGRATION_INCLUDE_DIR}")

target_link_libraries(${BEAST_INTEGRATION_TESTS_TARGET_NAME} PRIVATE ${BEAST_LIB_TARGET_NAME})
target_link_libraries(${BEAST_INTEGRATION_TESTS_TARGET_NAME} PRIVATE CONAN_PKG::gtest CONAN_PKG::spdlog)

# Group files into proper folders - for IDE
GROUP_FILES("${LAB_INTEGRATION_HEADERS_LIST}" "${LAB_INTEGRATION_INCLUDE_DIR}")
GROUP_FILES("${LAB_INTEGRATION_SRC_LIST}" "${LAB_INTEGRATION_SRC_DIR}")

install(TARGETS ${BEAST_INTEGRATION_TESTS_TARGET_NAME} DESTINATION "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")

if(WIN32)
	target_compile_definitions(${BEAST_INTEGRATION_TESTS_TARGET_NAME} PRIVATE BE_ENABLE_WINDOWS_TESTS)
endif()

target_precompile_headers(
	${BEAST_INTEGRATION_TESTS_TARGET_NAME}
	PRIVATE
		<string>
		<vector>
		<memory>
		<cstdint>
		<array>
)
